# cai

./: .caiignore  .gitattributes  .gitignore  .markdownlintignore  .mega-linter.yml  .semgrepignore  .trivyignore  CLAUDE.md  LICENSE  Makefile  PKGBUILD  README.md  cai.py  cai_config.yml  cai_config_test.yml  pyproject.toml  test.ipynb  test.py  test.txt
.github/cd/: .SRCINFO  PKGBUILD
.github/ci/: _version.py  cai_config.ci.yml  tokens.ci.yml
.github/workflows/: mega-linter.yml  python-tests.yml  release.yml  release_aur.yml
.linters/: .bandit.yml  .checkov.yml  .flake8  .ls-lint.yml  .markdownlint.json  .proselintrc  .pylintrc  check_git_branch_name.sh  kics.config  lychee.toml  pyrightconfig.json
arch/: .SRCINFO  PKGBUILD  cai-0.1.0-1-any.pkg.tar.zst
archlinux/: .SRCINFO  PKGBUILD  git-cai-cli-0.2.0-1-any.pkg.tar.zst  git-cai-cli-0.3.0-1-any.pkg.tar.zst
cai/: cli.py
cai/core/: config.py  gitutils.py  openai_utils.py
docs/: git-cai.txt
docs/man/: git-cai.1
docs/superpowers/specs/: 2026-06-14-custom-styles-design.md
man/: git-cai.1
src/git_cai_cli/: __init__.py  cli.py  main.py
src/git_cai_cli/cli/: cli.py  helptext.py  modes.py
src/git_cai_cli/core/: completion.py  config.py  doctor.py  editors.py  gitutils.py  init.py  languages.py  llm.py  options.py  pr.py  prompts_fallback.py  secrets.py  spinner.py  squash.py  stats.py  validate.py
src/git_cai_cli/defaults/: commit_prompt.md  squash_prompt.md
src/gitcai/: cli.py
src/gitcai/core/: openai_utils.py
src/tests/test_core/: test_config.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_config_integration.py  test_git_cai_integration.py  test_gitutils_integration.py  test_modes_integration.py  test_options_integration.py  test_pr_integration.py  test_squash_integration.py
tests/test_core/: test_config.py
tests/unit/: test_amend.py  test_branch_context.py  test_classification.py  test_cli.py  test_completion.py  test_config.py  test_conventional.py  test_doctor.py  test_gitutils.py  test_helptext.py  test_init.py  test_llm.py  test_main.py  test_modes.py  test_options.py  test_pr.py  test_print.py  test_prompt_loading.py  test_secrets.py  test_set_config.py  test_signoff.py  test_spinner.py  test_squash.py  test_stats.py  test_validate.py
