[project]
name = "git-cai-cli"
version = "0.1.0"
description = "Use LLM to create git commits"
authors = [{ name = "Thorsten Foltz", email = "thorsten.foltz@live.com" }]
keywords = ["Git", "LLM", "Commit"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/thorstenfoltz/cai"
Issues = "https://github.com/thorstenfoltz/cai/issues"

[project.scripts]
git-cai = "git_cai_cli.cli:main"

[build-system]
requires = ["uv_build >= 0.7.19"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
