[project]
name = "git-cai-cli"
dynamic = ["version"]
description = "Use LLM to create git commits"
authors = [{ name = "Thorsten Foltz", email = "thorsten.foltz@live.com" }]
keywords = ["Git", "LLM", "Commit", "AI", "GenAI"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "google-genai>=1.41.0",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/thorstenfoltz/cai"
Issues = "https://github.com/thorstenfoltz/cai/issues"

[project.scripts]
git-cai = "git_cai_cli.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
